tests/baselines/reference/primaryExpressionMods.errors.txt
==== tests/cases/compiler/primaryExpressionMods.ts (2 errors) ====
    module M
    {
        export interface P { x: number; y: number; }
        export var a = 1;
    }
    var p: M.P;             // Used as ModuleName
    var m: M = M;           // Used as TypeName and PrimaryExpression (error on TypeName)
           ~
!!! primaryExpressionMods.ts(7,8): error TS4022: Type reference cannot refer to container 'M'.
    var m2: typeof M = M;   // Used as PrimaryExpression in TypeQuery
    var x1 = M.a;           // Used as PrimaryExpression
    var x2 = m.a;           // Same as M.a
    var q: m.P;             // Error
           ~
!!! primaryExpressionMods.ts(11,8): error TS2095: Could not find symbol 'm'.
    